<resources>
    <string name="app_name">POSM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pin_description">The location of point to be added</string>
    <string name="title">Find point of interest</string>
    <string name="main_button_text">Choose location</string>
    <string name="title_activity_category_chooser">Category Chooser</string>
    <string name="title_activity_subcategory_chooser">Subcategory Chooser</string>
    <string name="category_title">Choose a Category</string>
    <string name="subcategory_title">Choose a Subcategory</string>
    <string name="point_type_title">Choose a Point Type</string>
    <string name="title_activity_finalizer">Finalizer</string>
    <string name="enter_details_prompt">Please enter POI details:</string>
    <string name="poi_name_input_hint">POI Name</string>
    <string name="poi_house_number_input_hint">Address Number</string>
    <string name="poi_street_name_input_hint">Street</string>
    <string name="poi_postal_code_input_hint">Postal Code</string>
    <string name="poi_city_input_hint">City</string>
    <string name="poi_state_input_hint">State</string>
    <string name="poi_country_input_hint">Country</string>
    <string name="poi_details_submit">Submit</string>
    <string-array name="bar">
        <item name="desc">A place selling alcoholic drinks</item>
        <item name="keys">amenity=bar</item>
        <item name="name">Bar</item>
    </string-array>
    <string-array name="bbq">
        <item name="desc">A public grill for cooking meat or vegetables, most typically to eat outdoors</item>
        <item name="keys">amenity=bbq</item>
        <item name="name">Barbecue Pit</item>
    </string-array>
    <string-array name="biergarten">
        <item name="desc">An outdoor area in which beer, other drinks, and local food are served</item>
        <item name="keys">amenity=biergarten</item>
        <item name="name">Biergarten</item>
    </string-array>
    <string-array name="cafe">
        <item name="desc">A cafe</item>
        <item name="keys">amenity=cafe</item>
        <item name="name">Cafe</item>
    </string-array>
    <string-array name="fast_food">
        <item name="desc">Fast food restaurant</item>
        <item name="keys">amenity=fast_food</item>
        <item name="name">Fast Food</item>
    </string-array>
    <string-array name="food_court">
        <item name="desc">An area with several different restaurant food counters and a shared eating area</item>
        <item name="keys">amenity=food_court</item>
        <item name="name">Food Court</item>
    </string-array>
    <string-array name="ice_cream">
        <item name="desc">Ice cream shop</item>
        <item name="keys">amenity=ice_cream</item>
        <item name="name">Ice Cream Place</item>
    </string-array>
    <string-array name="pub">
        <item name="desc">A place selling beer and other alcoholic drinks; may also provide food</item>
        <item name="keys">amenity=pub</item>
        <item name="name">Pub</item>
    </string-array>
    <string-array name="restaurant">
        <item name="desc">Restaurant (not fast food)</item>
        <item name="keys">amenity=restaurant</item>
        <item name="name">Restaurant</item>
    </string-array>
    <string-array name="college">
        <item name="desc">A college campus or buildings</item>
        <item name="keys">amenity=college</item>
        <item name="name">College</item>
    </string-array>
    <string-array name="kindergarten">
        <item name="desc">For children too young for a regular school (also known as playschool or nursery school)</item>
        <item name="keys">amenity=kindergarten</item>
        <item name="name">Kindergarten</item>
    </string-array>
    <string-array name="library">
        <item name="desc">A public library (municipal, university, etc.) to borrow books from</item>
        <item name="keys">amenity=library</item>
        <item name="name">Library</item>
    </string-array>
    <string-array name="school">
        <item name="desc">School and grounds</item>
        <item name="keys">amenity=school</item>
        <item name="name">School</item>
    </string-array>
    <string-array name="university">
        <item name="desc">A university campus</item>
        <item name="keys">amenity=university</item>
        <item name="name">University</item>
    </string-array>
    <string-array name="bicycle_parking">
        <item name="desc">Parking for bicycles</item>
        <item name="keys">amenity=bicycle_parking</item>
        <item name="name">Bicycle Parking</item>
    </string-array>
    <string-array name="bicycle_rental">
        <item name="desc">Rent a bicycle</item>
        <item name="keys">amenity=bicycle_rental</item>
        <item name="name">Bicycle Rental</item>
    </string-array>
    <string-array name="car_rental">
        <item name="desc">Rent a car</item>
        <item name="keys">amenity=car_rental</item>
        <item name="name">Car Rental</item>
    </string-array>
    <string-array name="car_sharing">
        <item name="desc">Share a car</item>
        <item name="keys">amenity=car_sharing</item>
        <item name="name">Car Sharing</item>
    </string-array>
    <string-array name="car_wash">
        <item name="desc">Wash a car</item>
        <item name="keys">amenity=car_wash</item>
        <item name="name">Car Wash</item>
    </string-array>
    <string-array name="charging_station">
        <item name="desc">Charging facility for electric vehicles</item>
        <item name="keys">amenity=charging_station</item>
        <item name="name">Electric Vehicle Charging Station</item>
    </string-array>
    <string-array name="ferry_terminal">
        <item name="desc">A place where people/cars/etc. can board and leave a ferry</item>
        <item name="keys">amenity=ferry_terminal</item>
        <item name="name">Ferry Terminal</item>
    </string-array>
    <string-array name="fuel">
        <item name="desc">A place to refuel a vehicle with gasoline/petrol</item>
        <item name="keys">amenity=fuel</item>
        <item name="name">Gas/Petrol Station</item>
    </string-array>
    <string-array name="parking">
        <item name="desc">Parking lot or parking garage</item>
        <item name="keys">amenity=parking</item>
        <item name="name">Parking Lot/Garage</item>
    </string-array>
    <string-array name="taxi">
        <item name="desc">A place where taxis wait for passengers</item>
        <item name="keys">amenity=taxi</item>
        <item name="name">Taxi Stand</item>
    </string-array>
    <string-array name="atm">
        <item name="desc">Automatic Teller Machine</item>
        <item name="keys">amenity=atm</item>
        <item name="name">ATM</item>
    </string-array>
    <string-array name="bank">
        <item name="desc">A bank</item>
        <item name="keys">amenity=bank</item>
        <item name="name">Bank</item>
    </string-array>
    <string-array name="bureau_de_change">
        <item name="desc">A place to change foreign bank notes and traveler\'s checks</item>
        <item name="keys">amenity=bureau_de_change</item>
        <item name="name">Currency Exchange</item>
    </string-array>
    <string-array name="baby_hatch">
        <item name="desc">A place to drop a baby anonymously for adoption</item>
        <item name="keys">amenity=baby_hatch</item>
        <item name="name">Baby Hatch</item>
    </string-array>
    <string-array name="clinic">
        <item name="desc">A medium-sized medical facility or health center</item>
        <item name="keys">amenity=clinic</item>
        <item name="name">Clinic</item>
    </string-array>
    <string-array name="dentist">
        <item name="desc">A dentist\'s practice</item>
        <item name="keys">amenity=dentist</item>
        <item name="name">Dentist\'s Office</item>
    </string-array>
    <string-array name="doctors">
        <item name="desc">A doctor\'s practice</item>
        <item name="keys">amenity=doctors</item>
        <item name="name">Doctor\'s Office</item>
    </string-array>
    <string-array name="hospital">
        <item name="desc">A large medical facility or health center</item>
        <item name="keys">amenity=hospital</item>
        <item name="name">Hospital</item>
    </string-array>
    <string-array name="nursing_home">
        <item name="desc">A home for disabled or elderly persons who need permanent care</item>
        <item name="keys">amenity=nursing_home</item>
        <item name="name">Nursing Home</item>
    </string-array>
    <string-array name="pharmacy">
        <item name="desc">Pharmacy</item>
        <item name="keys">amenity=pharmacy</item>
        <item name="name">Pharmacy</item>
    </string-array>
    <string-array name="social_facility">
        <item name="desc">A facility that provides social services</item>
        <item name="keys">amenity=social_facility</item>
        <item name="name">Social Facility</item>
    </string-array>
    <string-array name="veterinary">
        <item name="desc">A veterinarian\'s practice</item>
        <item name="keys">amenity=veterinary</item>
        <item name="name">Veterinarian</item>
    </string-array>
    <string-array name="arts_centre">
        <item name="desc">A venue where a variety of arts are performed or conducted</item>
        <item name="keys">amenity=arts_centre</item>
        <item name="name">Arts Center</item>
    </string-array>
    <string-array name="cinema">
        <item name="desc">A place where films are shown</item>
        <item name="keys">amenity=cinema</item>
        <item name="name">Movie Theater</item>
    </string-array>
    <string-array name="community_centre">
        <item name="desc">A place mostly used for local events and festivities</item>
        <item name="keys">amenity=community_centre</item>
        <item name="name">Community Center</item>
    </string-array>
    <string-array name="fountain">
        <item name="desc">A fountain for cultural, decorational, or recreational purposes</item>
        <item name="keys">amenity=fountain</item>
        <item name="name">Fountain</item>
    </string-array>
    <string-array name="nightclub">
        <item name="desc">A place to drink and dance</item>
        <item name="keys">amenity=nightclub</item>
        <item name="name">Nightclub</item>
    </string-array>
    <string-array name="social_centre">
        <item name="desc">A place for free and not-for-profit activities</item>
        <item name="keys">amenity=social_centre</item>
        <item name="name">Social Center</item>
    </string-array>
    <string-array name="studio">
        <item name="desc">TV radio or recording studio</item>
        <item name="keys">amenity=studio</item>
        <item name="name">Studio</item>
    </string-array>
    <string-array name="theatre">
        <item name="desc">A theatre or opera house</item>
        <item name="keys">amenity=theatre</item>
        <item name="name">Theater</item>
    </string-array>
    <string-array name="animal_boarding">
        <item name="desc">A facility to house an animal for a limited period of time</item>
        <item name="keys">amenity=animal_boarding</item>
        <item name="name">Kennel</item>
    </string-array>
    <string-array name="animal_shelter">
        <item name="desc">A shelter that recovers animals in trouble</item>
        <item name="keys">amenity=animal_shelter</item>
        <item name="name">Animal Shelter</item>
    </string-array>
    <string-array name="bench">
        <item name="desc">A bench to sit down and relax</item>
        <item name="keys">amenity=bench</item>
        <item name="name">Bench</item>
    </string-array>
</resources>