<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Finalizer" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_details_prompt" />

        <EditText
            android:id="@+id/poi_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/poi_name_input_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/poi_house_number_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/poi_house_number_input_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/poi_street_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/poi_street_name_input_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/poi_postal_code_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/poi_postal_code_input_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/poi_city_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/poi_city_input_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/poi_state_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/poi_state_input_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/poi_country_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/poi_country_input_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/poi_details_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poi_details_submit"
            android:onClick="onSubmit" />
        
    </LinearLayout>
    
</ScrollView>